# TapestryConversor

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/: PatternExtractor.h
src/: CMakeLists.txt  PatternExtractor.cpp
